# server/src/dtos/app.dtos.ts
@@ -84,7 +84,10 @@ import {
   RepositoryLocationType,
   RepositoryStatus,
   SearchCriteria,
-  SearchFeatureOperator,
+  SearchFeatureComparisonOperator,
+  SearchFeatureCondition,
+  SearchFeatureLogicalOperator,
+  SearchFeatures,
   SearchParameters,
   SearchProperties,
   SearchPropertyRange,
@@ -176,7 +179,10 @@ export {
   RepositoryLocationType,
   RepositoryStatus,
   SearchCriteria,
-  SearchFeatureOperator,
+  SearchFeatureCondition,
+  SearchFeatureComparisonOperator,
+  SearchFeatureLogicalOperator,
+  SearchFeatures,
   SearchParameters,
   SearchProperties,
   SearchPropertyRange,
